PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts_Graph: Restore support for error bars on vertical bar graph rendering
pts_Graph: Support for simpler view / rendering without header/footer

Phoronix Test Suite 9.4.0 Milestone 3
18 February 2020

pts-core: Add PDF bookmarks to result graphs on PDF result file generation
pts-core: Add automated executive summary of result files via executive-summary sub-command and PDF result export
pts-core: Add remove-result-from-result-file sub-command (slightly different from remove-results-from-result-file)
pts-core: Set SaveTestLogs = TRUE by default
pts-core: Set SaveInstallationLogs = TRUE by default
pts-core: Refactor test-logs (SaveTestLogs) handling
pts-core: Refactor test installation logs handling
pts-core: More verbose reporting of system/external dependency solving status
pts-core: Get the modern result viewer working on Windows
pts-core: Support for showing test logs from the result viewer
pts-core: Support for showing install logs from the result viewer
pts-core: PDF output improvements
pts-core: Fix for some suites not showing up on list-suites sub-command
pts-core: Report "Test Suites Containing This Test" in the info sub-command on tests
pts-core: On PDF export allow showing geometric means of tests based on their test suite connections
pts-core: Add intersect sub-command for showing tests common between multiple results/suites

Phoronix Test Suite 9.4.0 Milestone 2
5 February 2020

pts-core: Add config options allowing to modify or delete result files from the result viewer
pts-core: Allow deleting results from the result viewer
pts-core: Allow editing result file information from result viewer
pts-core: Allow deleting results (graphs) from result file in result viewer
pts-core: Add ability to annotate (comment) on result graphs within the result viewer
pts-core: Support converting graphs to PNG/PDF with Inkscape or svg-convert when PHP GD is not installed/enabled