@@ -53,6 +53,7 @@
 			<xs:element name="Proportion" type="Proportion" />
 			<xs:element name="DisplayFormat" type="DisplayFormat" />
 			<xs:element name="Annotation" type="xs:string" minOccurs="0" maxOccurs="1" />
+			<xs:element name="Parent" type="xs:string" minOccurs="0" maxOccurs="1" />
 			<xs:element name="Data">
 			<xs:complexType>
 			<xs:sequence>
